--- a/style.css
+++ b/style.css
@@ -81,12 +81,9 @@ body{
 }
 
 .banner{
-    font-size: 100px;
     width: 100%;
-    height: 300px;
-    text-align: center;
-    background: #9f781e;
-    margin-top: -30px;
+    margin: 50px 0;
+
 }
 
 .main p{
@@ -158,10 +155,10 @@ body{
 
 .loginblock{
     color:#ffc846;
-    width: 400px;
-    height: 350px;
-    margin: 30px auto;
-    margin-top: 50px;
+    width: 600px;
+    height: 500px;
+    margin: 3% auto;
+    margin-top: 60px;
     padding: 10px 0px 0px 0px;
     text-align: center;
 }
@@ -169,18 +166,21 @@ body{
 .loginblock h1{
     text-align: center;
     position: relative;
+    margin-bottom: 40px ;
     bottom: 30px;
+    font-size:25px;
 }
 
 .loginblock p{
     text-align: start;
-    font-size: 14px;
+    font-size: 13px;
+    font-weight: 500;
     padding:0px;
     margin:0px;
     margin-top: 15px;
     width: 100px;
     position: relative;
-    left:50px;
+    left:110px;
 
 }
 
@@ -188,13 +188,13 @@ body{
 
     color:white;
     font-weight: 500;
-    width: 300px;
+    width: 370px;
     height: 30px;
-    font-size: 16px;
+    font-size: 14px;
     background-color: #292929;
     border:none;
     outline:none;
-    margin:5px 0px;
+    margin:5px 0px 30px 0px;
     padding: 7px 15px;
     box-shadow: 0px 1.5px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
@@ -204,13 +204,13 @@ body{
 .loginblock input[type="password"]{
     color:white;
     font-weight: 500;
-    width: 300px;
+    width: 370px;
     height: 30px;
-    font-size: 16px;
+    font-size: 14px;
     background-color: #292929;
     border:none;
     outline:none;
-    margin:5px 0px;
+    margin:5px 0px 30px 0px;
     padding: 7px 15px;
     box-shadow: 0px 1.5px rgba(0, 0, 0, 0.297);
     border-radius: 5px;
@@ -218,10 +218,11 @@ body{
 }
 
 label{
-    font-size: 12px;
+    font-size: 11px;
     position: relative;
-    right: 65px;
     padding: 10px 0px;
+    right:110px;
+    bottom: 25px;
     
 }
 
@@ -229,30 +230,41 @@ label{
     margin-right: 5px;
 }
 
+.esqueceu{
+    font-size: 11px;
+    position: relative;
+    padding: 10px 0px;
+    left:140px;
+    bottom: 51px;
+    color: #ffc846;
+}
 
 
 
 
-button{
+
+
+
+.botao button{
     background-color: #ffc846;
-    font-size: 16px;
-    font-weight: 900;
-    position: flex;
-    
+    color:#181818;
+    font-weight: 800;
     width: 130px;
     height: 40px;
-    margin-top: 25px;
+    font-size: 16px;
     border:none;
-    box-shadow: 0px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 3px rgba(0, 0, 0, 0.3);
 
 }
 
-button:hover{
+.botao button:hover{
     background-color: #121212;
     border:1px solid #ffc846;
-    color:#ffc846;
+    color: #ffc846;
     cursor: pointer;
+
 }
+
 
 
 
@@ -284,46 +296,145 @@ table, th, td {
 
 
 
-.redessociais, .contato{
-    background-color: #1f1f1f;
-    width: 700px;
-    height: 300px;
-    padding: 0px;
-    font-weight: 600;
-    border-radius: 20px;
+
+
+/* --CONTATO--*/
+
+#contato{
+    padding: 0;
+    margin: 120px 0;
+    
+}
+
+#contato h2{
+    background-color: #ffc846;
+    color: #181818;
+    width: 100%;
+    height: 150px;
+    margin: 0;
+    line-height: 150px;
+    text-align: center;
+    font-size: 2.5em;
+
+
+}.contato{
+    color: #ffc846;
+    background: #20202070;
+    width: 70%;
+    height: 250px;
+    margin: 30px auto;
+    padding: 40px 0px;
+    display: flex;
+    justify-content:space-around;
+    border-radius: 20px;    
+}
+
+.contato i{
+    font-size: 1.5em;
+}
+
+
+.contato p{
+    font-weight: 500;
+}
+
+
+.contato h4{
+    color: #fff;
+    font-weight: 400;
+}
+
+
+
+
+#localizacao{
+    color: #ffc846;
+    background: #20202043;
+    width: 65%;
+    height: 700px;
+    margin: 20px auto;
+    padding: 20px 0px;
+    border-radius: 20px;   
+}
+
+#localizacao i{
+    font-size: 1.5em;
+    
+}
+
+.endereco, .tituloendereco{
+    padding: 10px 40px;
+    width: 75%;
     margin: 0px auto;
 }
 
-h3{
-    font-size: 30px;
+.endereco p{
+    color: white;
+    margin: 5px;
+    font-size: 15px;
+}
+
+
+
+
+
+.mapa{
+    text-align: center;
+}
+
+.mapa iframe{
+    border-radius: 20px;
+    width: 700px;
+    height: 350px;
+}
+
+
+
+
+.linha{
+    border-left:1px solid #ffc8463e;
+    width: 0;
+    height: 230px;
+}
+
+
+
+
+#redes{
+    margin-bottom: -20px;
+}
+
+#redes h2{
     color: #ffc846;
     text-align: center;
-    margin: 20px;
+    font-size: 1.3em;
 }
 
-.contato{
-    font-size: 20px;
-    margin: 1;
+#redes hr{
+    width: 40%;     
+    height: 1px;
+    background-color: #ffc846;
+    border:none;
+    margin-top: -10px;
+    margin-bottom: 30px;
 }
 
-.contato p{
-    margin: 10px 80px;
+.links{
+    display: flex;
+    justify-content: center;
 }
 
-.icones i{
-    margin: 11px;
-    padding: 1.5px;
-    position: relative;
-    bottom: 140px;
-    left: 30px;
+.links a{
+    margin: 20px 0px;
+    padding: 0 40px;
+    text-decoration: none;
+    color: #fff;
 }
 
-.redessociais{
-    text-align: center;
-    height: 150px;
+.links a:hover{
+    color: #ffc846;
 }
 
-.redessociais i{
-    font-size: 25px;
-
+.links i{
+    font-size: 1.2em;
 }
